added header content

--- a/views/index.html
+++ b/views/index.html
@@ -31,15 +31,17 @@
             <li><a href="#contacts">Contato</a></li>
           </ul>
         </nav>
-        <!-- <div class="header-content">
+        <div class="header-content">
           <h1 class="title">Sejam Bem Vindos</h1>
           <div class="botton-line my-2"></div>
           <p class="py-3">
             Este site é direcionado a todos que buscam uma transformação
             interior através do Reiki e outros sitemas de energia
           </p>
-          <a href="#courses" class="btn btn-primary">Confira nossos cursos</a>
-        </div> -->
+          <a href="#courses" class="btn btn-primary my-3"
+            >Confira nossos cursos</a
+          >
+        </div>
       </div>
     </header>
   </body>
