--- a/css/style.css
+++ b/css/style.css
@@ -56,11 +56,96 @@ img {
   font-size: 2rem;
 }
 
+.botton-line {
+  height: 2px;
+  width: 5rem;
+  background: #ffbc00;
+  display: block;
+  margin: 0 auto 1rem auto;
+}
+
+.py-1 {
+  padding-top: 1rem;
+}
+
+.py-2 {
+  padding-top: 2rem;
+}
+
+.py-3 {
+  padding-top: 3rem;
+}
+
+.p-1 {
+  padding: 1rem;
+}
+
+.p-2 {
+  padding: 2rem;
+}
+
+.p-3 {
+  padding: 3rem;
+}
+
+.my-1 {
+  margin-top: 1rem;
+}
+
+.my-2 {
+  margin-top: 2rem;
+}
+
+.my-3 {
+  margin-top: 3rem;
+}
+
+.btn,
+button[type="submit"] {
+  cursor: pointer;
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 0.6rem 1.2rem;
+  border: none;
+  border-radius: 5px;
+}
+
+.btn-primary {
+  background-color: var(--primary-color);
+  color: var(--light-color);
+}
+
+.btn-secondary {
+  background-color: var(--secondary-color);
+  color: var(--dark-color);
+}
+
+.btn-dark {
+  color: #f4f4f4;
+  background-color: #333;
+}
+
+.btn-primary:hover,
+.btn-secondary:hover,
+.btn-dark:hover {
+  opacity: 0.8;
+}
+
 /* Header */
 #header-home {
   background: url("../images/covers/01-universe.jpeg") no-repeat center
     center/cover;
   height: 100vh;
+}
+
+#header-home .header-content {
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  align-items: center;
+  text-align: center;
+  padding: 20%;
+  color: #fff;
 }
 
 /* Navbar */
