home-about e fix de container com navbar

--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,7 @@
     <title>Reiki Sublime | Bem Vindo</title>
   </head>
   <body>
+    <!-- Header -->
     <header id="header-home">
       <div class="container">
         <nav class="main-nav">
@@ -44,5 +45,49 @@
         </div>
       </div>
     </header>
+
+    <!-- Main -->
+    <main>
+      <div class="container">
+        <section id="about" class="home-about">
+          <div class="flex-container">
+            <img src="../images/person/03-douglas.jpg" alt="author" />
+            <div>
+              <h3 class="title">Instrutor Douglas Martins</h3>
+              <div class="botton-line my-1"></div>
+              <p class="py-2">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab
+                minima sint, eos libero doloribus dolorem nulla reiciendis
+                molestiae alias at incidunt officia totam sit unde saepe,
+                delectus cupiditate fuga eum nostrum, asperiores iusto
+                voluptatem animi. Quae iure facilis officia. Explicabo.
+              </p>
+              <a href="" class="btn btn-primary my-2">Leia Mais</a>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <footer id="main-footer">
+      <div class="footer-content container">
+        <p>Copyright &copy. All Rights Reserved by Reiki Sublime 2020</p>
+        <div class="social">
+          <p>Siga-nos</p>
+          <a href="https://t.me/reikisublime" target="_blank"
+            ><i class="fab fa-telegram"></i
+          ></a>
+          <a href="https://www.facebook.com/ReikiSublime/" target="_blank"
+            ><i class="fab fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/reikisublime_oficial/"
+            target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
