--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ img {
 /* Utilities */
 .container {
   max-width: var(--max-width);
-  padding: 0 1.5rem;
+  /* padding: 0 1rem; */
   margin: auto;
   overflow: hidden;
 }
@@ -59,7 +59,7 @@ img {
 .botton-line {
   height: 2px;
   width: 5rem;
-  background: #ffbc00;
+  background: var(--secondary-color);
   display: block;
   margin: 0 auto 1rem auto;
 }
@@ -131,6 +131,14 @@ button[type="submit"] {
   opacity: 0.8;
 }
 
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-self: center;
+  align-items: center;
+  text-align: center;
+}
+
 /* Header */
 #header-home {
   background: url("../images/covers/01-universe.jpeg") no-repeat center
@@ -152,8 +160,8 @@ button[type="submit"] {
 .main-nav {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  justify-content: center;
   align-items: center;
+  margin: 0 1rem;
 }
 
 .main-nav ul {
@@ -176,4 +184,52 @@ button[type="submit"] {
 .main-nav ul li a:hover {
   border-bottom: 2px solid var(--secondary-color);
   padding-bottom: 0.5rem;
+}
+
+/* Main */
+/* Home About */
+.home-about img {
+  width: 50%;
+}
+
+/* .home-about div p {
+  text-align: justify;
+  margin-left: 0.5rem;
+} */
+
+/* Footer */
+#main-footer {
+  background-color: var(--dark-color);
+  color: #fff;
+  height: 5rem;
+}
+
+#main-footer .footer-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 100%;
+  align-items: center;
+}
+
+#main-footer .footer-content .social {
+  display: flex;
+  flex-direction: row;
+  justify-self: center;
+  align-items: center;
+  text-align: center;
+}
+
+#main-footer .footer-content .social > * {
+  padding: 0 0.5rem;
+}
+
+#main-footer .footer-content .social i {
+  padding: 0.5rem;
+  border: 1px solid #fff;
+  border-radius: 50%;
+}
+
+#main-footer .footer-content .social i:hover {
+  background-color: var(--secondary-color);
 }
